@@ -1,3 +1,7 @@
+2010-01-31  Dominique Dumont  <domi.dumont@free.fr>
+
+	* lib/Config/Model/models/Itself/CommonElement.pl: warp out min and max
+
 2009-06-24  Dominique Dumont  <domi.dumont@free.fr> v1.211
 
 	* Build.PL: depend on Config::Model 0.637 and C::M::TkUI 1.210
